<resources>

    <!--mode production-->

    <string name="app_name">Gim\'Eole</string>
    <string name="mode_prod">Mode : Production</string>
    <string name="boutonVitesseDeRotation"><u>Vitesse de rotation (tr/min) :</u></string>
    <string name="boutonTensionEnEntree"><u>Tension en entrée du convertisseur (V) :</u></string>
    <string name="boutonCourantEnEntree"><u>Courant en entrée du convertisseur (A) :</u></string>
    <string name="boutonTensionEnSortie"><u>Tension en sortie du convertisseur (V) :</u></string>
    <string name="boutonCourantEnSortie"><u>Courant en sortie du convertisseur (A) :</u></string>
    <string name="boutonPuissanceFournie"><u>Puissance fournie par l\'éolienne (W) :</u></string>
    <string name="boutonEnergieProduite"><u>Energie produite par l\'éolienne (J) :</u></string>
    <string name="boutonTemperatureAlternateur"><u>Température de l\'alternateur (°C) :</u></string>
    <string name="boutonTemperatureFrein"><u>Température du frein (°C) :</u></string>
    <string name="courantDeFreinage"><u>Courant de freinage (A) :</u></string>
    <string name="remiseAZero">RAZ</string>
    <string name="nomJaugeVitesseDeRotation">Vitesse de rotation</string>
    <string name="nomJaugeTensionEnEntree">Tension en entrée du convertisseur</string>
    <string name="nomJaugeCourantEnEntree">Courant en entrée du convertisseur</string>
    <string name="nomJaugeTensionEnSortie">Tension en sortie du convertisseur</string>
    <string name="nomJaugeCourantEnSortie">Courant en sortie du convertisseur</string>
    <string name="nomJaugePuissanceFournie">Puissance fournie par l\'éolienne</string>
    <string name="nomJaugeEnergieProduite">Energie produite par l\'éolienne</string>
    <string name="nomJaugeTemperatureAlternateur">Température de l\'alternateur</string>
    <string name="nomJaugeTemperatureFrein">Température du frein</string>
    <string name="uniteJaugeKMH">tr/min</string>
    <string name="uniteJaugeVolt">V</string>
    <string name="uniteJaugeAmpere">A</string>
    <string name="uniteJaugeWatt">W</string>
    <string name="uniteJaugeJoule">J</string>
    <string name="uniteJaugeDegre">°C</string>
    <string name="valeurNulle">0</string>
    <string name="valeurVitesseMoyenne">Vitesse moyenne : </string>
    <string name="valeurTensionMoyenne">Tension moyenne : </string>
    <string name="valeurCourantMoyen">Courant moyen : </string>
    <string name="valeurPuissanceMoyenne">Puissance moyenne : </string>
    <string name="valeurTemperatureMoyenne">Température moyenne : </string>
    <string name="valeurVitesseMax">Vitesse max : </string>
    <string name="valeurTensionMax">Tension max : </string>
    <string name="valeurCourantMax">Courant max : </string>
    <string name="valeurPuissanceMax">Puissance max : </string>
    <string name="valeurTemperatureMax">Température max : </string>
    <string name="valeurEnergieProduite">L\'éolienne a produit : </string>
    <string name="connecteA">Connecté à : </string>
    <string name="boutonMode_reglage">Réglage</string>

    <!--mode réglage-->

    <string name="description">logo bt</string>
    <string name="boutonMode_prod">Production</string>
    <string name="mode_reglage">Mode : Réglage</string>
    <string name="validerPoint">Ajouter</string>
    <string name="supprimerPoint">Supprimer</string>
    <string name="modifierPoint">Modifier</string>
    <string name="envoyerPoints">Envoyer la série de points à l\'éolienne</string>
    <string name="modeSuivant">Suivant</string>
    <string name="modePrecedent">Precedent</string>
    <string name="freiner">Freiner</string>
    <string name="transfererProfil">Transférer profil</string>
    <string name="genererProfilAppli">Générer profilAppli</string>
    <string name="genererEquation">Générer équation</string>
    <string name="enregistrerProfilAppli">Enregistrer profilAppli</string>
    <string name="gererProfilAppli">Gérer profilAppli</string>
    <string-array name="genererProfilAppliAlertDialog">
        <item>A partir d\'un point</item>
        <item>Sur l\'ensemble des points</item>
        <item>Faire une copie du profilConv</item>
        <item>A partir d\'un fichier csv</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="annuler">Annuler</string>

    <string-array name="transfererProfilAlertDialog">
        <item>Envoyer le profilAppli</item>
        <item>Recevoir le profilConv</item>
    </string-array>
    <string name="coefficientsDuPolynome">Les coefficients de la fonction sont :</string>

    <!--Réglage des jauges-->

    <string name="titreRglage">Paramétrage des valeurs maximales</string>
    <string name="consigneDesReglage">Sélectionnez les valeurs maximales des jauges : </string>

</resources>
