<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/barreSeparationHorizontale"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="45dp"
        android:background="@color/gris"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/barreSeparationVerticale"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:background="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barreSeparationHorizontale" />

    <TextView
        android:id="@+id/titreModeProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_prod"
        app:layout_constraintBottom_toTopOf="@+id/barreSeparationHorizontale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boutonVitesseDeRotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonVitesseDeRotation"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonTensionEnEntree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonTensionEnEntree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonTensionEnEntree"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonCourantEnEntree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonVitesseDeRotation"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonCourantEnEntree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonCourantEnEntree"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonPuissanceFournie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonTensionEnEntree"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonPuissanceFournie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonPuissanceFournie"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonEnergieProduite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonCourantEnEntree"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonEnergieProduite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonEnergieProduite"

        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonTemperatureAlternateur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonPuissanceFournie"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonTemperatureAlternateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonTemperatureAlternateur"

        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonTemperatureFrein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonEnergieProduite"
        tools:visibility="visible" />

    <Button
        android:id="@+id/boutonTemperatureFrein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:text="@string/boutonTemperatureFrein"
        android:textAllCaps="false"

        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toBottomOf="@+id/boutonTemperatureAlternateur"
        tools:visibility="visible" />



    <Button
        android:id="@+id/boutonRAZenergie"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/remiseAZero"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boutonEnergieProduite"
        app:layout_constraintStart_toEndOf="@+id/barreSeparationVerticale"
        app:layout_constraintTop_toTopOf="@+id/boutonEnergieProduite"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoBluetooth"
        android:layout_width="30dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/barreSeparationHorizontale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logobluetoohdeconnecte" />

    <Button
        android:id="@+id/boutonReglage"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/reglage"
        app:layout_constraintBottom_toTopOf="@+id/barreSeparationHorizontale"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/vitesseRotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonVitesseDeRotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale" />

    <TextView
        android:id="@+id/tensionEnEntree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonTensionEnEntree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonVitesseDeRotation" />

    <TextView
        android:id="@+id/courantEnEntree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonCourantEnEntree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonTensionEnEntree" />

    <TextView
        android:id="@+id/puissanceFournie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonPuissanceFournie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonCourantEnEntree" />

    <TextView
        android:id="@+id/energieProduite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonEnergieProduite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonPuissanceFournie" />

    <TextView
        android:id="@+id/temperatureAlternateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonTemperatureAlternateur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonEnergieProduite" />

    <TextView
        android:id="@+id/temperatureFrein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurNulle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonTemperatureFrein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonTemperatureAlternateur" />

    <TextView
        android:id="@+id/nomJaugeCourante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/nomJaugeVitesseDeRotation"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale" />


    <com.sccomponents.gauges.gr008.GR008
        android:id="@+id/jaugeVitesseRotation"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        app:sccMajorTicks="200"
        app:sccMaxValue="3000"
        app:sccMinValue="1000"
        app:sccMinorTicks="50"
        app:sccShowContour="true"
        app:sccShowLabels="true"
        app:sccText="@string/uniteJaugeKMH" />

    <com.sccomponents.gauges.gr008.GR008
        android:id="@+id/jaugeTensionEnEntree"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        app:sccMajorTicks="5"
        app:sccMaxValue="50"
        app:sccMinValue="0"
        app:sccMinorTicks="1"
        app:sccShowContour="true"
        app:sccShowLabels="true"
        app:sccText="@string/uniteJaugeVolt" />

    <com.sccomponents.gauges.gr008.GR008
        android:id="@+id/jaugeCourantEnEntree"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        app:sccMajorTicks="5"
        app:sccMaxValue="50"
        app:sccMinValue="0"
        app:sccMinorTicks="1"
        app:sccShowContour="true"
        app:sccShowLabels="true"
        app:sccText="@string/uniteJaugeAmpere" />

    <com.sccomponents.gauges.gr008.GR008
        android:id="@+id/jaugePuissanceFournie"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        app:sccMajorTicks="200"
        app:sccMaxValue="2000"
        app:sccMinValue="1000"
        app:sccMinorTicks="50"
        app:sccShowContour="true"
        app:sccShowLabels="true"
        app:sccText="@string/uniteJaugeWatt" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/jaugeEnergieProduite"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        android:visibility="invisible"
        app:rcBackgroundColor="@color/gris"
        app:rcMax="100"
        app:rcProgressColor="@color/colorPrimary"
        app:rcRadius="10dp"
        app:rcReverse="false"
        app:rcSecondaryProgressColor="@color/colorAccent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id = "@+id/thermometreAlternateur"
        android:layout_width="180dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"></androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id = "@+id/thermometreFrein"
        android:layout_width="180dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"></androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/valeurMoyenne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurVitesseMoyenne"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/valeurMax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jaugeVitesseRotation" />

    <TextView
        android:id="@+id/valeurMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurVitesseMax"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toEndOf="@+id/valeurMoyenne"
        app:layout_constraintTop_toBottomOf="@+id/jaugeVitesseRotation" />

    <TextView
        android:id="@+id/valeurEnergieProduite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/valeurEnergieProduite"
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barreSeparationVerticale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jaugeVitesseRotation" />


</androidx.constraintlayout.widget.ConstraintLayout>