<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/barreSeparationHorizontale"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="45dp"
        android:background="@color/gris"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titreReglage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreRglage"
        app:layout_constraintBottom_toTopOf="@+id/barreSeparationHorizontale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/consigneReglage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consigneDesReglage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barreSeparationHorizontale"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/boutonReglageActiviteReglage"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/reglage"
        app:layout_constraintBottom_toTopOf="@+id/barreSeparationHorizontale"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/vitesseRotation"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonVitesseDeRotation"
        app:layout_constraintBottom_toTopOf="@+id/tensionEnEntree"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consigneReglage" />

    <TextView
        android:id="@+id/tensionEnEntree"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonTensionEnEntree"
        app:layout_constraintBottom_toTopOf="@+id/courantEnEntree"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitesseRotation" />

    <TextView
        android:id="@+id/courantEnEntree"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonCourantEnEntree"
        app:layout_constraintBottom_toTopOf="@+id/puissanceFournie"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tensionEnEntree" />

    <TextView
        android:id="@+id/puissanceFournie"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonPuissanceFournie"
        app:layout_constraintBottom_toTopOf="@+id/energieProduite"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courantEnEntree" />

    <TextView
        android:id="@+id/energieProduite"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonEnergieProduite"
        app:layout_constraintBottom_toTopOf="@+id/temperatureAlternateur"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puissanceFournie" />

    <TextView
        android:id="@+id/temperatureAlternateur"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonTemperatureAlternateur"
        app:layout_constraintBottom_toTopOf="@+id/temperatureFrein"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energieProduite" />

    <TextView
        android:id="@+id/temperatureFrein"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/boutonTemperatureFrein"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureAlternateur" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/editText1"
        app:layout_constraintStart_toEndOf="@+id/vitesseRotation"
        app:layout_constraintTop_toBottomOf="@+id/consigneReglage" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/tensionEnEntree"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toEndOf="@+id/courantEnEntree"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintStart_toEndOf="@+id/puissanceFournie"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintStart_toEndOf="@+id/energieProduite"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/temperatureAlternateur"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeurMin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintStart_toEndOf="@+id/temperatureFrein"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/consigneReglage" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="85dp"
        android:layout_height="19dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />


</androidx.constraintlayout.widget.ConstraintLayout>